# singulitaronaut.github.io

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: general.mdc
.github/workflows/: deploy.yml
docs/: 2025-06-25-about.html  2025-06-26-tandem-goal-pursuit.html  2025-07-02-ai-restrictions-asymmetric-advantage.html  2025-07-31-gerrymandering-corrected.html  2025-07-31-gerrymandering-decoded.html  2025-08-01-gerrymandering-corrected.html  CNAME  about.html  building-with-github-actions.html  index.html  monospace-design-showcase.html  sitemap.xml  welcome-to-my-blog.html
docs/static/: index.js  style.css  styles.css
pages/: index.md
posts/: 2025-06-26-tandem-goal-pursuit.md  2025-07-02-ai-restrictions-asymmetric-advantage.md  2025-07-31-gerrymandering-corrected.md  2025-07-31-gerrymandering-decoded.md  2025-08-01-gerrymandering-corrected.md  about.md  building-with-github-actions.md  monospace-design-showcase.md  welcome-to-my-blog.md
scripts/: build.py  screenshot.py
static/: grid.js  index.css  reset.css  styles.css
templates/: base.html  index.html  post.html
