[project]
name = "markdown-blog"
version = "1.0.0"
description = "A static blog generator that converts markdown files with YAML frontmatter into beautiful HTML"
authors = [
    {name = "Christopher C. Smith", email = "christopher.smith@promptlytechnologies.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commonmark>=0.9.1",
    "Jinja2>=3.1.2",
    "PyYAML>=6.0.1",
    "python-frontmatter>=1.0.0",
    "Pillow>=10.1.0",
    "pymarkdown-video>=1.1.0",
    "beautifulsoup4>=4.13.4",
]

[project.urls]
Homepage = "https://christophercarrollsmith/monospace-web-python"
Repository = "https://github.com/chriscarrollsmith/monospace-web-python"

[tool.uv]
dev-dependencies = [] 
