[project]
name = "markdown-blog"
version = "1.0.0"
description = "A static blog generator that converts markdown files with YAML frontmatter into beautiful HTML"
authors = [
    {name = "Christopher C. Smith", email = "christopher.smith@promptlytechnologies.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Jinja2>=3.1.2",
    "PyYAML>=6.0.1",
    "python-frontmatter>=1.0.0",
    "Pillow>=10.1.0",
    "mistletoe>=1.4.0",
]

[project.urls]
Homepage = "https://christophercarrollsmith/monospace-web-python"
Repository = "https://github.com/chriscarrollsmith/monospace-web-python"

[tool.uv]
dev-dependencies = [] 
